wk_taa_taaqa/src/objects/External_Data__c.object
<CustomObject>
    <fields>
        <fullName>AC_Trial__c</fullName>
        <label>AC Trial</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <formula>HYPERLINK(&quot;/&quot;+ Account_X_Reference__r.Account__r.Id  ,  Account_X_Reference__r.Account__r.Name )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Number__c</fullName>
        <externalId>true</externalId>
        <label>Account Number</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Status__c</fullName>
        <label>Account Status</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Type__c</fullName>
        <label>Account Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_X_Reference__c</fullName>
        <label>Account X Reference</label>
        <referenceTo>Account_X_Reference__c</referenceTo>
        <relationshipLabel>External Data</relationshipLabel>
        <relationshipName>External_Data</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>External Data</relationshipLabel>
        <relationshipName>External_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Available_Subscription_Amount__c</fullName>
        <label>Available Subscription Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Cumulative_Subscription_Usage__c</fullName>
        <formula>Original_Subscription_Amount__c - Available_Subscription_Amount__c</formula>
        <label>Cumulative Subscription Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_Remaining_in_Subscription__c</fullName>
        <formula>IF( Subscription_End_Date__c - DATEVALUE( CreatedDate ) &lt; 0 , 0 ,
    IF( Days_in_Subscription__c &lt; (Subscription_End_Date__c - DATEVALUE( CreatedDate )), 
        Days_in_Subscription__c ,
        Subscription_End_Date__c - DATEVALUE( CreatedDate ) 
       ) 
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days Remaining in Subscription</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Days_in_Subscription__c</fullName>
        <formula>Subscription_End_Date__c  - Subscription_Start_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Days in Subscription</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distinct_Documents_Viewed__c</fullName>
        <label>Distinct Documents Viewed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distinct_Sessions__c</fullName>
        <label>Distinct Sessions</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Distinct_Users__c</fullName>
        <label>Distinct Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Error_Count__c</fullName>
        <label>Error Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Last_Access_Date__c</fullName>
        <label>Last Access Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Activity_Date__c</fullName>
        <label>Last Activity Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Login_Date__c</fullName>
        <label>Last Login Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Library_Name__c</fullName>
        <label>Library Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Segment__c</fullName>
        <label>Market Segment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Market_Sub_Segment__c</fullName>
        <label>Market Sub Segment</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Monthly_Subscription_Usage__c</fullName>
        <label>Monthly Subscription Usage</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>New_Users__c</fullName>
        <label>New Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Browses__c</fullName>
        <label>Number of Browses</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Days__c</fullName>
        <label>Number of Days</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Documents_Emailed__c</fullName>
        <label>Number of Documents Emailed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Documents_Exported__c</fullName>
        <label>Number of Documents Exported</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Documents_Printed__c</fullName>
        <label>Number of Documents Printed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Events__c</fullName>
        <label>Number of Events</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Log_Outs__c</fullName>
        <label>Number of Log Outs</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Logins__c</fullName>
        <label>Number of Logins</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Prints__c</fullName>
        <label>Number of Prints</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Saves__c</fullName>
        <label>Number of Saves</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Searches__c</fullName>
        <label>Number of Searches</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Original_Subscription_Amount__c</fullName>
        <label>Original Subscription Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Product_ID__c</fullName>
        <label>Product ID</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Quarter__c</fullName>
        <label>Quarter</label>
        <length>1</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rank__c</fullName>
        <label>Rank</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Registered_Users__c</fullName>
        <label>Registered Users</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Salesforce_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Salesforce Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>IntelliConnect User Data</relationshipLabel>
        <relationshipName>IntelliConnect_User_Data</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Session_Time_HH_MM__c</fullName>
        <label>Session Time (HH:MM)</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Source__c</fullName>
        <label>Source</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>ARM Lock Outs</fullName>
                </value>
                <value>
                    <fullName>ARM Usage Data</fullName>
                </value>
                <value>
                    <fullName>BI Answer Connect User Usage</fullName>
                </value>
                <value>
                    <fullName>IntelliConnect Usage</fullName>
                </value>
                <value>
                    <fullName>IntelliConnect User Data</fullName>
                </value>
                <value>
                    <fullName>Learning Center</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscriber_Name__c</fullName>
        <label>Subscriber Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_End_Date__c</fullName>
        <label>Subscription End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Period_Progress__c</fullName>
        <formula>IF( Days_Remaining_in_Subscription__c = 0,0,
    IF(1-(Days_Remaining_in_Subscription__c / Days_in_Subscription__c)&lt;0,0, 
       1-(Days_Remaining_in_Subscription__c / Days_in_Subscription__c)
))</formula>
        <label>Subscription Period Progress (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Subscription_Start_Date__c</fullName>
        <label>Subscription Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Subscription_Type__c</fullName>
        <label>Subscription Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Hours</fullName>
                </value>
                <value>
                    <fullName>Trainings</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Subscription_Usage_Progress__c</fullName>
        <formula>IF(1-(Available_Subscription_Amount__c / Original_Subscription_Amount__c)&lt;0,0,
1-(Available_Subscription_Amount__c / Original_Subscription_Amount__c)
)</formula>
        <label>Subscription Usage Progress (%)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Total_Documents_Viewed__c</fullName>
        <label>Total Documents Viewed</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Usage_Month2__c</fullName>
        <formula>TEXT(Year(Usage_Month__c ))
+ &quot;-&quot;
+ CASE( Month( Usage_Month__c ),
1,&quot;01&quot;,
2,&quot;02&quot;,
3,&quot;03&quot;,
4,&quot;04&quot;,
5,&quot;05&quot;,
6,&quot;06&quot;,
7,&quot;07&quot;,
8,&quot;08&quot;,
9,&quot;09&quot;,
10,&quot;10&quot;,
11,&quot;11&quot;,
&quot;12&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Usage Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Usage_Month__c</fullName>
        <label>Usage Month</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>User_DTN__c</fullName>
        <formula>OR(Account__r.R_L_ISC__c = $User.DTN__c,
 Account__r.R_L_FSR__c = $User.DTN__c,
 Account__r.R_L_ASR__c = $User.DTN__c,
 Account__r.Service_Source__c = $User.DTN__c,
 Account__r.AISR__c = $User.DTN__c,
 Account__r.QP__c = $User.DTN__c,
 Account__r.Corp_Direct__c  = $User.DTN__c,
 Account__r.Corp_Indirect__c = $User.DTN__c,
 Account__r.Inside_Sales__c = $User.DTN__c,
 Account__r.Pro_SW_FSR__c = $User.DTN__c,
 Account__r.SW_ASR__c = $User.DTN__c,
 Account__r.NAM_SAM_CNAM__c = $User.DTN__c
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>User DTN</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>User_ID__c</fullName>
        <label>User ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Type__c</fullName>
        <label>User Type</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>X18_Digit_Record_ID__c</fullName>
        <formula>CASESAFEID(Id)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>18 Digit Record ID</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Year__c</fullName>
        <label>Year</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <label>External Data</label>
    <listViews>
        <fullName>AC_Has_Trial_but_No_AC_Usage</fullName>
        <columns>NAME</columns>
        <columns>Account_Number__c</columns>
        <columns>Account__c</columns>
        <columns>User_ID__c</columns>
        <columns>Salesforce_Contact__c</columns>
        <columns>User_Type__c</columns>
        <columns>Number_of_Days__c</columns>
        <columns>AC_Trial__c</columns>
        <columns>Last_Access_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Status__c</field>
            <operation>equals</operation>
            <value>Has Trial but No AC Usage</value>
        </filters>
        <label>AC: Has Trial but No AC Usage</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AC_Has_Trial_but_No_AC_Usage_DTN</fullName>
        <columns>NAME</columns>
        <columns>Account_Number__c</columns>
        <columns>Account__c</columns>
        <columns>User_ID__c</columns>
        <columns>Salesforce_Contact__c</columns>
        <columns>User_Type__c</columns>
        <columns>Number_of_Days__c</columns>
        <columns>AC_Trial__c</columns>
        <columns>Last_Access_Date__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Account_Status__c</field>
            <operation>equals</operation>
            <value>Has Trial but No AC Usage</value>
        </filters>
        <filters>
            <field>User_DTN__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>AC: Has Trial but No AC Usage (DTN)</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AC_Usage_Data</fullName>
        <columns>NAME</columns>
        <columns>Account_Name__c</columns>
        <columns>Usage_Month__c</columns>
        <columns>User_ID__c</columns>
        <columns>User_Type__c</columns>
        <columns>Salesforce_Contact__c</columns>
        <columns>Number_of_Days__c</columns>
        <columns>AC_Trial__c</columns>
        <columns>Account_Type__c</columns>
        <columns>Account_Status__c</columns>
        <columns>Last_Access_Date__c</columns>
        <columns>Market_Segment__c</columns>
        <columns>Market_Sub_Segment__c</columns>
        <columns>Source__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Source__c</field>
            <operation>equals</operation>
            <value>BI Answer Connect User Usage</value>
        </filters>
        <label>AC Usage Data</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Source__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>ED-{0000000}</displayFormat>
        <label>External Data Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>External Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>